tests/ui/type-alias-impl-trait/in-where-clause.stderr
error[E0391]: cycle detected when computing type of `Bar::{opaque#0}`
  --> $DIR/in-where-clause.rs:5:12
   |
LL | type Bar = impl Sized;
   |            ^^^^^^^^^^
   |
note: ...which requires computing type of opaque `Bar::{opaque#0}`...
  --> $DIR/in-where-clause.rs:5:12
   |
LL | type Bar = impl Sized;
   |            ^^^^^^^^^^
note: ...which requires type-checking `foo`...
  --> $DIR/in-where-clause.rs:9:1
   |
LL | / fn foo() -> Bar
LL | | where
LL | |     Bar: Send,
   | |______________^
   = note: ...which requires revealing opaque types in `[Binder { value: TraitPredicate(<Bar as core::marker::Send>, polarity:Positive), bound_vars: [] }]`...
   = note: ...which again requires computing type of `Bar::{opaque#0}`, completing the cycle
note: cycle used when checking that `Bar::{opaque#0}` is well-formed
  --> $DIR/in-where-clause.rs:5:12
   |
LL | type Bar = impl Sized;
   |            ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0391]: cycle detected when computing type of opaque `Bar::{opaque#0}`
  --> $DIR/in-where-clause.rs:5:12
   |
LL | type Bar = impl Sized;
   |            ^^^^^^^^^^
   |
note: ...which requires type-checking `foo`...
  --> $DIR/in-where-clause.rs:13:9
   |
LL |     [0; 1 + 2]
   |         ^^^^^
   = note: ...which requires evaluating trait selection obligation `Bar: core::marker::Send`...
   = note: ...which again requires computing type of opaque `Bar::{opaque#0}`, completing the cycle
note: cycle used when computing type of `Bar::{opaque#0}`
  --> $DIR/in-where-clause.rs:5:12
   |
LL | type Bar = impl Sized;
   |            ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0391`.
